<resources>
    <string name="app_name">BGD Music Quick App</string>
    <string name="bgd_concert">bgd_concert_announcment</string>
    <string name="bgd_music_quick_app">BGD Music Quick App</string>
    <string name="concert">concert</string>
    <string name="bad_girls_dream_1990_present_app_home_page" translatable="false"><a href="https://bgdmusic.club/bad-girls-dream-home/">
        Bad Girls Dream 1990 - Present App Home Page</a></string>
    <string name="bad_girls_dream_1990_present_app_login_registration_page" translatable="false"><a href="https://homer.bgdmusic.club/login/">
        Bad Girls Dream 1990 - Present App Login/Registration Page</a></string>
    <string name="mosh_fix_of_bad_girls_dream_1989_mosh_page" translatable="false"><a href="https://mosh.bgdmusic.club/">
        Mosh Fix of Bad Girls Dream - 1989 Mosh Page</a></string>
    <string name="mosh_and">mosh_and</string>
    <string name="cassette">cassette</string>
    <string name="string_cassette" />
    <string name="our_blog_of_bad_girls_dream_1990_blog_page" translatable="false"><a href="https://bgdmusic.club/our-blog-bad-girls/">
        Our Blog of Bad Girls Dream - 1990 Blog Page</a></string>
    <string name="dueling_worlds">dueling_worlds</string>
    <string name="restless_child" />
    <string name="restless">restless</string>
    <string name="string_restless">restless</string>
    <string name="vivs_biz">vivs_biz</string>
    <string name="ic_bgd_concert_512">ic_bgd_concert_512</string>
    <string name="ic_bgd_music_app_product_image">ic_bgd_music_app_product_image</string>
    <string name="bad_girls_dream_album_in_app_site_the_taste_of_satisfaction_1990_album_5_songs_1_99" translatable="false">
        <a href="https://shop.duelingworlds.com/shop/bad-girls-dream-album-in-app-site-the-taste-of-satisfaction-1990-album-5-songs-1-99/">
            Bad Girls Dream Album in App Site “The Taste of Satisfaction” 1990 Album, 5 songs $1.99</a></string>
    <string name="restless_child_album_in_app_site_1989_album_12_songs_2_99" translatable="false">
        <a href="https://shop.duelingworlds.com/shop/restless-child-album-in-app-site-1989-album-12-songs-2-99/">
            Restless Child Album in App Site 1989 Album, 12 songs $2.99</a></string>
    <string name="brayton_scott_music_entertainment_all_music_app_17_songs_3_99" translatable="false">
        <a href="https://shop.duelingworlds.com/shop/brayton-scott-music-entertainment-all-music-app-17-songs-3-99/">
            Brayton Scott Music Entertainment All Music App, 17 Songs $3.99</a></string>
    <string name="dueling_worlds_international_quick_app" translatable="false"><a href="https://duelingworlds.com">
        Dueling Worlds© International Quick App</a></string>
    <string name="restless_child_1988_to_present_quick_app" translatable="false"><a href="https://restlesschild.rocks">
        Restless Child 1988 to Present Quick App</a></string>
    <string name="shopping_vivians_quick_app" translatable="false"><a href="https://vivians.biz">Shopping @ Vivians Quick App</a></string>
    <string name="bad_girls_dream_ep_album_in_app_site_the_taste_of_satisfaction_1990_album_5_songs_1_99" translatable="false">
        <a href="https://shop.duelingworlds.com/shop/bad-girls-dream-album-in-app-site-the-taste-of-satisfaction-1990-album-5-songs-1-99/">
            Bad Girls Dream EP Album in App Site “The Taste of Satisfaction” 1990 Album, 5 songs $1.99</a></string>
    <string name="restless_child_album_in_app_site_1989_ep_album_12_songs_2_99" translatable="false">
        <a href="https://shop.duelingworlds.com/shop/restless-child-album-in-app-site-1989-album-12-songs-2-99/">
            Restless Child Album in App Site 1989 EP Album, 12 songs $2.99</a></string>
    <string name="brayton_scott_music_entertainment_all_ep_music_app_17_songs_3_99" translatable="false">
        <a href="https://shop.duelingworlds.com/shop/brayton-scott-music-entertainment-all-music-app-17-songs-3-99/">
            Brayton Scott Music Entertainment All EP Music App, 17 Songs $3.99</a></string>
</resources>