<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/bgdHome"
        android:layout_width="80dp"
        android:layout_height="75dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/concert"
        android:onClick="openBrowser"
        android:tag="https://homer.bgdmusic.club"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerText"
        app:srcCompat="@drawable/bgd_concert_512" />

    <TextView
        android:id="@+id/headerText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="87dp"
        android:layout_marginLeft="87dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="87dp"
        android:layout_marginRight="87dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/bgd_music_quick_app"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/BgdHome"
        android:layout_width="80dp"
        android:layout_height="75dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/concert"
        android:onClick="openBrowser"
        android:tag="https://homer.bgdmusic.club"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerText"
        app:srcCompat="@drawable/bgd_concert_512" />

    <TextView
        android:id="@+id/homerBgdLinkText"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:background="@android:color/black"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/bad_girls_dream_1990_present_app_home_page"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/BgdHome"
        app:layout_constraintTop_toBottomOf="@+id/headerText" />

    <ImageView
        android:id="@+id/BgdHomeLogin"
        android:layout_width="80dp"
        android:layout_height="75dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BgdHome"
        android:onClick="openBrowser"
        android:tag="https://homer.bgdmusic.club/login/"
        app:srcCompat="@drawable/bgd_concert_512"
        android:contentDescription="@string/bgd_concert" />

    <TextView
        android:id="@+id/homerBgdLinkText2"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:background="@android:color/black"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/bad_girls_dream_1990_present_app_login_registration_page"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toEndOf="@+id/BgdHome"
        app:layout_constraintTop_toBottomOf="@+id/headerText" />

    <ImageView
        android:id="@+id/MoshFix"
        android:layout_width="80dp"
        android:layout_height="75dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BgdHomeLogin"
        android:onClick="openBrowser"
        android:tag="https://mosh.bgdmusic.club/"
        app:srcCompat="@drawable/mosh_and"
        android:contentDescription="@string/mosh_and" />

    <TextView
        android:id="@+id/moshBgdLinkText3"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="212dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:background="@android:color/black"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/mosh_fix_of_bad_girls_dream_1989_mosh_page"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toEndOf="@+id/BgdHome"
        app:layout_constraintTop_toBottomOf="@+id/headerText" />

    <ImageView
        android:id="@+id/Cassette"
        android:layout_width="80dp"
        android:layout_height="75dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MoshFix"
        android:onClick="openBrowser"
        android:tag="https://blog.bgdmusic.club/"
        app:srcCompat="@drawable/cassette_512"
        android:contentDescription="@string/string_cassette" />

    <TextView
        android:id="@+id/blogBgdLinkText4"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:background="@android:color/black"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/our_blog_of_bad_girls_dream_1990_blog_page"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toEndOf="@+id/BgdHome"
        app:layout_constraintTop_toBottomOf="@+id/headerText" />

    <ImageView
        android:id="@+id/DuelingWorlds"
        android:layout_width="80dp"
        android:layout_height="75dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Cassette"
        android:onClick="openBrowser"
        android:tag="https://home.duelingworlds.com/"
        app:srcCompat="@drawable/duelingworlds_512"
        android:contentDescription="@string/dueling_worlds"/>

    <TextView
        android:id="@+id/DuelWorLinkText5"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="392dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:background="@android:color/black"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/dueling_worlds_international_home_page"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toEndOf="@+id/BgdHome"
        app:layout_constraintTop_toBottomOf="@+id/headerText" />

    <ImageView
        android:id="@+id/RestlessChild"
        android:layout_width="80dp"
        android:layout_height="75dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="15dp"
        android:onClick="openBrowser"
        android:tag="https://home.restlesschild.rocks/"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DuelingWorlds"
        app:srcCompat="@drawable/restless_512"
        android:contentDescription="@string/string_restless" />

    <TextView
        android:id="@+id/ResChiLinkText6"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="480dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:background="@android:color/black"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/restless_child_1988_to_present_app_beginning_home_page"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toEndOf="@+id/BgdHome"
        app:layout_constraintTop_toBottomOf="@+id/headerText" />

</androidx.constraintlayout.widget.ConstraintLayout>